# data-collector

./: CMakeLists.txt  db_cmd.txt
cmake/: common.cmake
src/data_uploader/: CMakeLists.txt  main.cpp
src/data_uploader/mongodb/: mongo_utility.hpp  mongo_wrapper.hpp
src/data_uploader/realsense/: rs_wrapper.hpp
src/data_uploader/uploader/: image_saver.hpp  image_uploader.hpp
